--- a/src/Calculo.form
+++ b/src/Calculo.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Calculo">
-  <grid id="27dc6" binding="Calculadora" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="Calculadora" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="453" height="535"/>
+      <xy x="20" y="20" width="453" height="612"/>
     </constraints>
     <properties>
       <background color="-2050"/>
-      <minimumSize width="285" height="405"/>
-      <preferredSize width="285" height="405"/>
+      <minimumSize width="285" height="585"/>
+      <preferredSize width="285" height="585"/>
     </properties>
     <border type="none"/>
     <children>
@@ -53,7 +53,7 @@
       </component>
       <component id="77ccd" class="javax.swing.JButton" binding="a7Button" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="60" height="60"/>
             <preferred-size width="60" height="60"/>
             <maximum-size width="60" height="60"/>
@@ -66,7 +66,7 @@
       </component>
       <component id="838c1" class="javax.swing.JButton" binding="a4Button" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="60" height="60"/>
             <preferred-size width="60" height="60"/>
             <maximum-size width="60" height="60"/>
@@ -79,7 +79,7 @@
       </component>
       <component id="756a" class="javax.swing.JButton" binding="a1Button" default-binding="true">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="60" height="60"/>
             <preferred-size width="60" height="83"/>
             <maximum-size width="60" height="60"/>
@@ -92,7 +92,7 @@
       </component>
       <component id="276b4" class="javax.swing.JButton" binding="a00Button" default-binding="true">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="60" height="60"/>
             <preferred-size width="60" height="60"/>
             <maximum-size width="60" height="60"/>
@@ -114,6 +114,176 @@
         <properties>
           <font name="Segoe UI" size="16" style="1"/>
           <text value="←"/>
+        </properties>
+      </component>
+      <component id="e52bc" class="javax.swing.JButton" binding="button2" default-binding="true">
+        <constraints>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="83"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="÷"/>
+        </properties>
+      </component>
+      <component id="c64ab" class="javax.swing.JButton" binding="button16" default-binding="true">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="±"/>
+        </properties>
+      </component>
+      <component id="7d1fa" class="javax.swing.JButton" binding="a9Button" default-binding="true">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="9"/>
+        </properties>
+      </component>
+      <component id="70322" class="javax.swing.JButton" binding="a6Button" default-binding="true">
+        <constraints>
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="6"/>
+        </properties>
+      </component>
+      <component id="14022" class="javax.swing.JButton" binding="a3Button" default-binding="true">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="83"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="3"/>
+        </properties>
+      </component>
+      <component id="b3e0e" class="javax.swing.JButton" binding="button15" default-binding="true">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="."/>
+        </properties>
+      </component>
+      <component id="bdd1d" class="javax.swing.JButton" binding="a8Button" default-binding="true">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="8"/>
+        </properties>
+      </component>
+      <component id="f1212" class="javax.swing.JButton" binding="a5Button" default-binding="true">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="5"/>
+        </properties>
+      </component>
+      <component id="75b65" class="javax.swing.JButton" binding="a2Button" default-binding="true">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="83"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="2"/>
+        </properties>
+      </component>
+      <component id="cbb5e" class="javax.swing.JButton" binding="a0Button" default-binding="true">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="16" style="1"/>
+          <text value="0"/>
+        </properties>
+      </component>
+      <component id="5af05" class="javax.swing.JButton" binding="SENButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="12" style="1"/>
+          <rolloverEnabled value="true"/>
+          <text value="SEN"/>
+        </properties>
+      </component>
+      <component id="fc931" class="javax.swing.JButton" binding="COSButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="12" style="1"/>
+          <text value="COS"/>
+        </properties>
+      </component>
+      <component id="437ed" class="javax.swing.JButton" binding="TANButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="60" height="60"/>
+            <preferred-size width="60" height="60"/>
+            <maximum-size width="60" height="60"/>
+          </grid>
+        </constraints>
+        <properties>
+          <font name="Segoe UI" size="12" style="1"/>
+          <text value="TAN"/>
         </properties>
       </component>
       <component id="33656" class="javax.swing.JButton" binding="button4" default-binding="true">
@@ -142,22 +312,22 @@
           <text value="x"/>
         </properties>
       </component>
-      <component id="e52bc" class="javax.swing.JButton" binding="button2" default-binding="true">
+      <component id="fb345" class="javax.swing.JButton" binding="button8" default-binding="true">
         <constraints>
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="83"/>
+            <preferred-size width="60" height="60"/>
             <maximum-size width="60" height="60"/>
           </grid>
         </constraints>
         <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="÷"/>
+          <font name="Segoe UI" size="12" style="1"/>
+          <text value="√"/>
         </properties>
       </component>
       <component id="1770a" class="javax.swing.JButton" binding="button1" default-binding="true">
         <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="60" height="60"/>
             <preferred-size width="60" height="60"/>
             <maximum-size width="60" height="60"/>
@@ -168,121 +338,18 @@
           <text value="="/>
         </properties>
       </component>
-      <component id="c64ab" class="javax.swing.JButton" binding="button16" default-binding="true">
+      <component id="97b29" class="javax.swing.JButton" binding="POWButton" default-binding="true">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="60" height="60"/>
             <preferred-size width="60" height="60"/>
             <maximum-size width="60" height="60"/>
           </grid>
         </constraints>
         <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="±"/>
-        </properties>
-      </component>
-      <component id="7d1fa" class="javax.swing.JButton" binding="a9Button" default-binding="true">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="60"/>
-            <maximum-size width="60" height="60"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="9"/>
-        </properties>
-      </component>
-      <component id="70322" class="javax.swing.JButton" binding="a6Button" default-binding="true">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="60"/>
-            <maximum-size width="60" height="60"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="6"/>
-        </properties>
-      </component>
-      <component id="14022" class="javax.swing.JButton" binding="a3Button" default-binding="true">
-        <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="83"/>
-            <maximum-size width="60" height="60"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="3"/>
-        </properties>
-      </component>
-      <component id="b3e0e" class="javax.swing.JButton" binding="button15" default-binding="true">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="60"/>
-            <maximum-size width="60" height="60"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="."/>
-        </properties>
-      </component>
-      <component id="bdd1d" class="javax.swing.JButton" binding="a8Button" default-binding="true">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="60"/>
-            <maximum-size width="60" height="60"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="8"/>
-        </properties>
-      </component>
-      <component id="f1212" class="javax.swing.JButton" binding="a5Button" default-binding="true">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="60"/>
-            <maximum-size width="60" height="60"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="5"/>
-        </properties>
-      </component>
-      <component id="75b65" class="javax.swing.JButton" binding="a2Button" default-binding="true">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="83"/>
-            <maximum-size width="60" height="60"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="2"/>
-        </properties>
-      </component>
-      <component id="cbb5e" class="javax.swing.JButton" binding="a0Button" default-binding="true">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="60" height="60"/>
-            <preferred-size width="60" height="60"/>
-            <maximum-size width="60" height="60"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font name="Segoe UI" size="16" style="1"/>
-          <text value="0"/>
+          <contentAreaFilled value="true"/>
+          <font name="Segoe UI" size="12" style="1"/>
+          <text value="^"/>
         </properties>
       </component>
     </children>
